objects/tffa__ReferralProgram__c.object
<CustomObject>
    <description>A referral (or &quot;refer a friend&quot;) program is a marketing strategy that incentivises existing customers (referrers) to recommend your products to their friends, family and colleagues (referees). Often called &quot;word of mouth&quot; marketing, it takes advantage of natural or latent word of mouth with easy to use sharing tools (e.g. email, sms, social, etc) and referral rewards (e.g. fee waiver, cash rewards, etc). Referral programs can be also extended to agents where you incentivise agents to sell more products by using the same easy to use sharing tools.</description>
    <fields>
        <fullName>tffa__Active__c</fullName>
        <description>Reports whether the referral program is active for consumption. Derived from disabled and effective period (StartDate &amp; EndDate) of the referral program.</description>
        <formula>tffa__Disabled__c = False &amp;&amp; tffa__StartDate__c &lt;= TODAY() &amp;&amp; tffa__EndDate__c &gt;= TODAY()</formula>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__Bundle__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The product bundle recommended by the referral program.</description>
        <label>Bundle</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Bundle is inactive or invalid.</errorMessage>
            <filterItems>
                <field>tffa__Product__c.tffa__Active__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <filterItems>
                <field>tffa__Product__c.tffa__Type__c</field>
                <operation>equals</operation>
                <value>Bundle</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>tffa__Product__c</referenceTo>
        <relationshipLabel>Bundle Referral Programs</relationshipLabel>
        <relationshipName>BundleReferralPrograms</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>tffa__CampaignId__c</fullName>
        <description>The unique identifier of the Campaign related to the program. This can be within salesforce or outside.</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>Campaign ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>tffa__Campaign__c</fullName>
        <description>The individual campaign name, slogan, promo code associated with the referral program. Aligns with utm_campaign parameter.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Campaign</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__Code__c</fullName>
        <description>A logical identifier for the referral program.</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>Code</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>tffa__Description__c</fullName>
        <description>A summarized description, meant to provide a quick overview about the referral program.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>tffa__Disabled__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Captures explicit disabling of the referral program independent of any configured effective range.</description>
        <label>Disabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__EndDate__c</fullName>
        <defaultValue>DATE(2049,1,1)</defaultValue>
        <description>The date on which the referral program expires. Captures the upper bound of the effective range.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>tffa__Exhausted__c</fullName>
        <description>Indicates whether the number of referral codes generated has exceeded the maximum limit.</description>
        <formula>tffa__MaxNumberOfReferralCodes__c&gt;0 &amp;&amp; tffa__NumberOfReferralCodes__c &gt;= tffa__MaxNumberOfReferralCodes__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Exhausted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__ExternalId__c</fullName>
        <description>External id as referred by external system</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>tffa__FullDescription__c</fullName>
        <description>A comprehensive description enumerating key features about the referral program.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Full description</label>
        <length>1024</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>tffa__IconClass__c</fullName>
        <description>Style classes for rendering an icon describing (the nature of) the referral program.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Icon class</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__ImageUrl__c</fullName>
        <description>Location of image describing the referral program as a url.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Image URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>tffa__InfoUrl__c</fullName>
        <description>Location of additional resource about the referral program as a url.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Info URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>tffa__IsBusinessConfiguration__c</fullName>
        <description>Business configuration marker.</description>
        <formula>TRUE</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Business Configuration</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__IsBusiness__c</fullName>
        <description>True if business type of product or bundle is selected</description>
        <formula>IF(ISBLANK(tffa__Product__c), IF(ISBLANK(tffa__Bundle__c), BEGINS(TEXT(tffa__ProductCategory__c), &quot;BUSINESS_&quot;), tffa__Bundle__r.tffa__IsBusiness__c), tffa__Product__r.tffa__IsBusiness__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Business</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__IsDeleted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>True if the object is marked for delete.</description>
        <label>Is Deleted?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__MaxNumberOfReferralCodes__c</fullName>
        <description>Maximum number of referral codes that can be created under the referral program.</description>
        <inlineHelpText>Maximum number of referral codes that can be created under the referral program.</inlineHelpText>
        <label>Maximum number of Referral Codes</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tffa__MaxNumberOfReferralsPerCode__c</fullName>
        <description>Maximum number of referrals that can be submitted per referral code under the referral program.</description>
        <inlineHelpText>Maximum number of referrals that can be submitted per referral code under the referral program.</inlineHelpText>
        <label>Maximum number of Referrals per Code</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tffa__NumberOfReferralCodes__c</fullName>
        <description>Number of referral codes created under the referral program.</description>
        <label>Referrers</label>
        <summaryForeignKey>tffa__ReferralCode__c.tffa__Program__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>tffa__NumberOfReferrals__c</fullName>
        <description>Number of referrals submitted under the referral program.</description>
        <label>Number of Referrals</label>
        <summarizedField>tffa__ReferralCode__c.tffa__NumberOfReferrals__c</summarizedField>
        <summaryForeignKey>tffa__ReferralCode__c.tffa__Program__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>tffa__NumberOfReferredVisitors__c</fullName>
        <description>Number of Referred Visitors under the referral program.</description>
        <label>Referred Visitors</label>
        <summarizedField>tffa__ReferralCode__c.tffa__NumberOfReferredVisitors__c</summarizedField>
        <summaryForeignKey>tffa__ReferralCode__c.tffa__Program__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>tffa__ProductCategory__c</fullName>
        <description>The product category of the product recommended by the referral program.</description>
        <label>Product Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__ProductCategory</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>tffa__Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The product recommended by the referral program.</description>
        <label>Product</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Product is inactive or invalid.</errorMessage>
            <filterItems>
                <field>tffa__Product__c.tffa__Category__c</field>
                <operation>equals</operation>
                <valueField>$Source.tffa__ProductCategory__c</valueField>
            </filterItems>
            <filterItems>
                <field>tffa__Product__c.tffa__Active__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <filterItems>
                <field>tffa__Product__c.tffa__Type__c</field>
                <operation>equals</operation>
                <value>Product</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>tffa__Product__c</referenceTo>
        <relationshipLabel>Referral Programs</relationshipLabel>
        <relationshipName>ReferralPrograms</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>tffa__ProgramReminderSchedule__c</fullName>
        <description>Schedule (frequency in days) for reminder emails sent to referrers enrolled in the program.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Configure reminder schedule in number of days, with each number separated by a semicolon ;. Example - 5;15;30</inlineHelpText>
        <label>Program Reminder schedule(for referrers)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__Promotion__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The promotion recommended by the referral program.</description>
        <label>Promotion</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Promotion is inactive.</errorMessage>
            <filterItems>
                <field>tffa__Promotion__c.tffa__Active__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>tffa__Promotion__c</referenceTo>
        <relationshipLabel>Referral Programs</relationshipLabel>
        <relationshipName>ReferralPrograms</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>tffa__RefereeRewardDescription__c</fullName>
        <description>A summarized description of the rewards for the referee (or referred) under the referral program.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Referee reward description</label>
        <length>1024</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>tffa__ReferralReminderSchedule__c</fullName>
        <description>Schedule (frequency in days) for reminder emails sent to referees (referred parties of referrals).</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Configure reminder schedule in number of days, with each number separated by a semicolon ;. Example - 5;15;30</inlineHelpText>
        <label>Referral Reminder schedule(for referees)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__ReferrerRewardDescription__c</fullName>
        <description>A summarized description of the rewards for the referrer under the referral program.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Referrer reward description</label>
        <length>1024</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>tffa__ReferrerRewardName__c</fullName>
        <description>Name of the referrer reward.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Referrer reward name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__ReferrerRewardThreshold__c</fullName>
        <description>The threshold for earning referrer rewards. Defined in terms of number of converted referrals required for each reward.</description>
        <label>Referrer reward threshold</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tffa__ReferrerRewardType__c</fullName>
        <description>Type of the referrer reward e.g. credit, discount, coupon, point, etc</description>
        <label>Referrer reward type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__RewardType</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>tffa__ReferrerRewardValue__c</fullName>
        <description>The (numeric) value of the referrer reward. Depends on the referrer reward type. e.g. for credit it will be amount credited (in dollars), for discount it will be discount percent on fees, for point this will be reward points in a credit card, etc.</description>
        <label>Referrer reward value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tffa__ReferrerType__c</fullName>
        <description>Type of referrer who can join the referral program.</description>
        <label>Referrer type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__ReferrerType</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>tffa__ShareLinkText__c</fullName>
        <defaultValue>&quot;Here&apos;s my referral link:&quot;</defaultValue>
        <description>Message text used when sharing the referral link using native sharing mechanisms like whatsapp, facebook, twitter, etc</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Message text used when sharing the referral link using native sharing mechanisms like whatsapp, facebook, twitter, etc</inlineHelpText>
        <label>Share link text</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>tffa__ShareLinkTitle__c</fullName>
        <description>Message title used when sharing the referral link using native sharing mechanisms like whatsapp, facebook, twitter, etc</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Message title used when sharing the referral link using native sharing mechanisms like whatsapp, facebook, twitter, etc</inlineHelpText>
        <label>Share link title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__SharingOptions__c</fullName>
        <defaultValue>&quot;DIRECT&quot;</defaultValue>
        <description>The different ways referrers can share their referral links with their friends and family under the referral program.</description>
        <label>Referral sharing options</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__ReferralSharingOption</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>tffa__StartDate__c</fullName>
        <defaultValue>Today()</defaultValue>
        <description>The date from which the referral program is active or ready for consumption. Captures the lower bound of the effective range.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>tffa__Title__c</fullName>
        <description>Title of the referral program. Also used as subject in referral program emails to referrers.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Title of the referral program. Also used as subject in referral program emails to referrers.</inlineHelpText>
        <label>Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Referral Program</label>
    <listViews>
        <fullName>tffa__All</fullName>
        <columns>NAME</columns>
        <columns>tffa__ReferrerType__c</columns>
        <columns>tffa__Description__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Referral Programs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>tffa__MaxNumberOfReferralCodes</fullName>
        <active>true</active>
        <description>NumberOfReferralCodes cannot exceed MaxNumberOfReferralCodes</description>
        <errorConditionFormula>NOT(ISNULL(tffa__MaxNumberOfReferralCodes__c)) &amp;&amp; tffa__NumberOfReferralCodes__c &gt; tffa__MaxNumberOfReferralCodes__c</errorConditionFormula>
        <errorMessage>Number of referral codes exceeds the maximum limit set in the referral program</errorMessage>
    </validationRules>
</CustomObject>